# go1cms

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css  main.js  router.js  socket.js  translation.js
go1_cms/: hooks.py  modules.txt  scheduled_tasks.py
go1_cms/api/: __init__.py  auth.py  blog_tag.py  category.py  client_website.py  common.py  contact_setup.py  doc.py  doc_events.py  domain.py  export_template.py  footer.py  form_setup.py  forms.py  handler_file.py  header.py  language.py  mbw_contact.py  mbw_website_template.py  menu.py  new_page.py  notifications.py  page.py  post.py  report.py  session.py  settings.py  setup_file_template.py  utils.py  views.py  web_setup.py  wrapper_api.py
go1_cms/config/: desktop.py  docs.py
go1_cms/fixtures/: background_gradient.json  background_mask.json  color_palette.json  css_font.json  custom_field.json  custom_query.json  faq.json  footer_component.json  footer_layout.json  header_component.json  header_layout.json  menu.json  menus_item.json  page_section.json  section_component.json  section_component_group.json  section_template.json  section_template_group.json  testimonial.json  typography_default_color.json  typography_text.json  web_page_builder.json  web_theme.json
go1_cms/go1_cms/: after_install.py  api.py  before_uninstall.py  cms_admin_api.py  domains.json  media_setting.json  proposal_api.py  setup_template.json
go1_cms/www/: cms.py  (+2 more)
(+915 files in other folders)
