[project]
name = "go1_cms"
authors = [
    { name = "MBW", email = "lamthatnhanh111@gmail.com"}
]
description = "Go1 CMS"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "python-slugify",
    "premailer"
]
